--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,72 @@ proguard/
 
 # Log Files
 *.log
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*.pyc
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+env/
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Rope
+.ropeproject
+
+# Django stuff:
+*.log
+*.pot
+
+# Sphinx documentation
+docs/_build/
+
+#Others
+.*~
+.
+..
+*~
+
+Server/virtualenv/
+Server/.idea/
+Android/SmartHomeController/build/
+Android/SmartHomeController/gradle/
+Android/SmartHomeController/.gradle/
+Android/SmartHomeController/.idea/
+Android/SmartHomeController/app/build/
